force-app/main/default/objects/ActivityHistory__c/ActivityHistory__c.object-meta.xml
<CustomObject>
    <label>ActivityHistory</label>
    <nameField>
        <displayFormat>AH-{0}</displayFormat>
        <label>ActivityHistory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ActivityHistories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>