force-app/main/default/objects/ActivityHistory__c/fields/NewValue__c.field-meta.xml
<CustomField>
    <fullName>NewValue__c</fullName>
    <label>NewValue</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>