force-app/main/default/objects/ActivityHistory__c/fields/SObjectName__c.field-meta.xml
<CustomField>
    <fullName>SObjectName__c</fullName>
    <label>SObjectName</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>