force-app/main/default/objects/ActivityHistory__c/fields/Who__c.field-meta.xml
<CustomField>
    <fullName>Who__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>User Who Changed</inlineHelpText>
    <label>Who</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ActivityHistories</relationshipName>
    <type>Lookup</type>
</CustomField>