force-app/main/default/objects/ActivityHistory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SObjectName__c</columns>
    <columns>FieldName__c</columns>
    <columns>SObjectId__c</columns>
    <columns>OldValue__c</columns>
    <columns>NewValue__c</columns>
    <columns>Who__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>